--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ p {
 }
 
 body {
-  background-color: black;
+  background-color: purple;
 }
 
 h2 {
@@ -34,4 +34,8 @@ p {
 h6 {
   color: white;
   font-size: 30px;
+}
+
+title {
+  text-align: center;
 }
