--- a/styles.css
+++ b/styles.css
@@ -1,45 +1,214 @@
-h1 {
-  color: white;
-  font-size: 30px;
-  text-underline-position: below;
-}
-
-h2 {
-  color: white;
-  font-size: 30px;
-}
-
-p {
-  font-size: medium;
-}
+@import url('https://fonts.googleapis.com/css?family=Lato');
 
 body {
-  background-color: green;
+  font-family: 'Lato', sans-serif;
+  align-items: center;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
 }
 
-h2 {
-  text-align: center;
+.form {
+  background-color: #15172b;
+  border-radius: 20px;
+  box-sizing: border-box;
+  height: 80%;
+  padding: 20px;
+  width: 40%;
 }
 
-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+.title {
+  color: #eee;
+  font-family: sans-serif;
+  font-size: 36px;
+  font-weight: 600;
+  margin-top: 30px;
+}
+
+.subtitle {
+  color: #eee;
+  font-family: sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  margin-top: 10px;
+}
+
+.input-container {
+  height: 50px;
+  position: relative;
+  width: 100%;
+}
+
+.ic1 {
+  margin-top: 40px;
+}
+
+.ic2 {
+  margin-top: 30px;
+}
+
+.input {
+  background-color: #303245;
+  border-radius: 12px;
+  border: 0;
+  box-sizing: border-box;
+  color: #eee;
+  font-size: 18px;
+  height: 100%;
+  outline: 0;
+  padding: 4px 20px 0;
+  width: 100%;
+}
+
+.cut {
+  background-color: #15172b;
+  border-radius: 10px;
+  height: 20px;
+  left: 20px;
+  position: absolute;
+  top: -20px;
+  transform: translateY(0);
+  transition: transform 200ms;
+  width: 90%;
+}
+
+.cut-short {
+  width: 50px;
+}
+
+.input:focus ~ .cut,
+.input:not(:placeholder-shown) ~ .cut {
+  transform: translateY(8px);
+}
+
+.placeholder {
+  color: #65657b;
+  left: 20px;
+  line-height: 14px;
+  pointer-events: none;
+  position: absolute;
+  transform-origin: 0 50%;
+  transition: transform 200ms, color 200ms;
+  top: 20px;
+}
+
+.input:focus ~ .placeholder,
+.input:not(:placeholder-shown) ~ .placeholder {
+  transform: translateY(-30px) translateX(10px) scale(0.75);
+}
+
+.input:not(:placeholder-shown) ~ .placeholder {
+  color: #808097;
+}
+
+.input:focus ~ .placeholder {
+  color:#08d;
 }
 
 p {
-  text-indent: 50px;
+  color: #65657b;
 }
 
-h6 {
-  color: white;
-  font-size: 30px;
+.radio-container ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  overflow: auto;
 }
 
-title {
+ul li{
+  color: #65657b;
+  display: block;
+  position: relative;
+  float: left;
+}
+
+ul li input[type=radio]{
+  position: absolute;
+  visibility: hidden;
+}
+
+ul li label{
+  display: block;
+  position: relative;
+  padding: 4px 8px 4px 32px;
+  margin: 4px auto;
+  z-index: 9;
+  cursor: pointer;
+  
+}
+
+ul li:hover label{
+  color: #FFFFFF;
+}
+
+ul li .check{
+  display: block;
+  position: absolute;
+  border: 2px solid #65657b;
+  border-radius: 100%;
+  height: 16px;
+  width: 16px;
+  top: 8px;
+  left: 8px;
+  z-index: 5;
+  transition: border .25s linear;
+  -webkit-transition: border .25s linear;
+}
+
+ul li:hover .check {
+  border: 4px solid #FFFFFF;
+}
+
+ul li .check::before {
+  display: block;
+  position: absolute;
+  content: '';
+  border-radius: 100%;
+  height: 8px;
+  width: 8px;
+  top: 4px;
+  left: 4px;
+  margin: auto;
+  transition: background 0.25s linear;
+  -webkit-transition: background 0.25s linear;
+}
+
+input[type=radio]:checked ~ .check {
+  border: 3px solid #08d;
+}
+
+input[type=radio]:checked ~ .check::before{
+  background: #08d;
+}
+
+input[type=radio]:checked ~ label{
+  color: #08d;
+}
+
+.submit {
+  background-color: #08d;
+  border-radius: 12px;
+  border: 0;
+  box-sizing: border-box;
+  color: #eee;
+  cursor: pointer;
+  font-size: 18px;
+  height: 50px;
+  margin-top: 38px;
+  outline: 0;
   text-align: center;
+  width: 100%;
+  
 }
 
-h1 {
+.submit:active {
+  background-color: #06b;
+}
+
+h2 {
+  color: #fff;
+  padding-top: 32px;
   text-align: center;
 }
